2014-10-04  Alan Schmitt  <alan.schmitt@polytechnique.org>  (tiny change)

	* nnimap.el (nnimap-process-expiry-targets): Reverse the list of
	expired messages only when it was built in reverse order.

2014-10-04  Peter Münster  <pmlists@free.fr>  (tiny change)

	* gnus-delay.el (gnus-delay-send-queue): Remove `gnus-delay-header'
	last so it can be used in `message-send-hook'.

2014-10-02  Daiki Ueno  <ueno@gnu.org>

	* mml.el (mml-parse-1): Error out if unknown mode is specified in
	<#secure> tag (bug#18513).

2014-09-29  Daiki Ueno  <ueno@gnu.org>

	* mml.el (mml-parse-1): Error out if unknown mode is specified in
	<#secure> tag (bug#18513).

2014-09-11  Paul Eggert  <eggert@cs.ucla.edu>

	* gnus-cloud.el (gnus-cloud-parse-version-1): Fix misspelling
	of ":delete".

2014-08-26  Katsumi Yamaoka  <yamaoka@jpl.org>

	* gnus-art.el (gnus-article-browse-html-save-cid-content)
	(gnus-article-browse-html-parts):
	Revert last change that breaks links other than cid contents.

2014-08-26  Katsumi Yamaoka  <yamaoka@jpl.org>

	* gnus-art.el (gnus-article-browse-html-save-cid-content)
	(gnus-article-browse-html-parts): Make cid file names relative.

2014-08-21  Katsumi Yamaoka  <yamaoka@jpl.org>

	* mm-view.el (mm-display-inline-fontify): Make the working buffer
	temporarily displayed when running a mode function (at least org-mode
	requires it).

2014-08-14  Alan Schmitt  <alan.schmitt@polytechnique.org>

	* gnus-sum.el (gnus-summary-expire-articles): Functions registered to
	the gnus-summary-article-expire-hook should be told where the function
	is going. In particular, the Gnus registry might want to know.

2014-08-12  Stefan Monnier  <monnier@iro.umontreal.ca>

	* gnus-art.el (gnus-hidden-properties): Drop the evil `intangible'.

2014-08-06  Katsumi Yamaoka  <yamaoka@jpl.org>

	* gnus-sum.el (gnus-summary-expire-articles): Revert.

2014-08-05  Eric Abrahamsen  <eric@ericabrahamsen.net>

	* gnus-sum.el (gnus-summary-expire-articles): Functions registered to